Add servers endpoint as an optional parameter

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -36,7 +36,7 @@
             ;
 
             // 1. Create the client
-            apisearch.client('repository_name', 'http://api.apisearch.io/v1/', 'api_key');
+            apisearch.client('comment_repository', 'sandbox_comments_secret');
 
             searchInput.addEventListener('keyup', function (e) {
                 // 2.- compose query
