byUser and anonymously completed

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -55,6 +55,9 @@
                         total_hits: result.total_hits,
                         items: result.items || []
                     });
+
+                    // Log
+                    console.log(result);
                 });
             });
         </script>
