feature: filterUniverseByIds and filterUniverseByTypes plus tests

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -44,6 +44,7 @@
                     .query
                     .create(e.target.value)
                 ;
+                console.log(query)
 
                 // 3.- Execute search
                 apisearch.search(query, function (result, error) {
