refactoring: change directory structure for better code organization

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -42,8 +42,7 @@
                 // 2.- compose query
                 query = apisearch
                     .query
-                    .createMatchAll()
-                    query.aggregateBy('comment', 'comment')
+                    .create(e.target.value)
                 ;
                 console.log(query)
 
