--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Apisearch Javascript example</title>
-        <script src="../dist/apisearch.min.js"></script>
+        <script src="../dist/apisearch.js"></script>
     </head>
     <body>
         <!-- Content -->
@@ -35,32 +35,32 @@
             ;
 
             // 1. Create the client
-            let client = apisearch('sandbox_comments_secret');
+            let api = apisearch('sandbox_comments_secret');
             let query;
 
             searchInput.addEventListener('keyup', function (e) {
                 // 2.- compose query
-                query = client.query
+                query = api.query
                     .createLocated(
-                        client.createCoordinate(1.2324, 1.1232),
+                        api.createCoordinate(1.2324, 1.1232),
                         e.target.value
                     )
                     .promoteUUID(
-                        client.createUUID('some_type', 'some_uuid')
+                        api.createUUID('some_type', 'some_uuid')
                     )
                     .filterUniverseByLocation(
-                        client.createPolygon(
-                            client.createCoordinate(1.32, 1.32),
-                            client.createCoordinate(1.35, 1.36),
-                            client.createCoordinate(1.40, 1.38)
+                        api.createPolygon(
+                            api.createCoordinate(1.32, 1.32),
+                            api.createCoordinate(1.35, 1.36),
+                            api.createCoordinate(1.40, 1.38)
                         )
                     )
                     .enableHighlights()
                 ;
-                console.log(query)
+                console.log(query, api)
 
                 // 3.- Execute search
-                client.search(query, function (result, error) {
+                api.search(query, function (result, error) {
                     // Handle error
                     if (error) {
                         console.log(error)
