dev-feature+docs: webpack-dev-server for apisearch lcient examples + improve docs

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Apisearch Javascript example</title>
-        <script src="../dist/apisearch.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/apisearch/dist/apisearch.min.js"></script>
     </head>
     <body>
         <!-- Content -->
