feature: adding headers on the request to pass apiKey and appId = timeout parameter

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -38,7 +38,7 @@
             // 1. Create the client
             let api = apisearch({
                 appId: 'music',
-                apiKey: '1cc7a3e0-bda5-11e7-abc4-cec278b6b50a'
+                apiKey: '1cc7a3e0-bda5-11e7-abc4-cec278b6b50a',
             });
             let query;
 
