fix+feature: fixed default Query page parameter and added setPage on Query class

--- a/examples/javascript.html
+++ b/examples/javascript.html
@@ -39,6 +39,9 @@
             let api = apisearch({
                 appId: 'music',
                 apiKey: '1cc7a3e0-bda5-11e7-abc4-cec278b6b50a',
+                cache: {
+                    inMemory: false
+                }
             });
             let query;
 
