fix: add dynamic http/https protocol on default request endpoint

--- a/examples/search_input.html
+++ b/examples/search_input.html
@@ -38,10 +38,7 @@
             // 1. Create the client
             var api = apisearch({
                 appId: 'music',
-                apiKey: '5fadd8c4-c966-11e7-abc4-cec278b6b50a',
-                options: {
-                    endpoint: 'http://192.168.0.101:81/app.php'
-                }
+                apiKey: '5fadd8c4-c966-11e7-abc4-cec278b6b50a'
             });
             var query;
 
