refactoring(Apisearch): added new parameter on the entry point for the index name

--- a/examples/search_input.html
+++ b/examples/search_input.html
@@ -38,7 +38,11 @@
             // 1. Create the client
             var api = apisearch({
                 appId: 'music',
-                apiKey: '5fadd8c4-c966-11e7-abc4-cec278b6b50a'
+                index: 'default',
+                token: '5fadd8c4-c966-11e7-abc4-cec278b6b50a',
+                options: {
+                    endpoint: 'b2298209.ngrok.io'
+                }
             });
             var query;
 
