fix(demo): removed unused endpoint

--- a/examples/search_input.html
+++ b/examples/search_input.html
@@ -39,10 +39,7 @@
             var api = apisearch({
                 appId: 'music',
                 index: 'default',
-                token: '5fadd8c4-c966-11e7-abc4-cec278b6b50a',
-                options: {
-                    endpoint: 'b2298209.ngrok.io'
-                }
+                token: '5fadd8c4-c966-11e7-abc4-cec278b6b50a'
             });
             var query;
 
