update(deps): update axios client + updated protocol parameter to be directly in the endpoint string param

--- a/examples/search-input.html
+++ b/examples/search-input.html
@@ -37,9 +37,9 @@
 
             // 1. Create the client
             var api = apisearch({
-                appId: 'music',
-                index: 'default',
-                token: '5fadd8c4-c966-11e7-abc4-cec278b6b50a'
+                appId: '54725861',
+                indexId: '66777162',
+                token: 'daf93c2b-40bc-49f2-870e-f8f62ea524ad'
             });
             var query;
 
