feature(Query): can obtain a JSON object from the created query

--- a/examples/search-input.html
+++ b/examples/search-input.html
@@ -47,7 +47,7 @@
                 // 2.- compose query
                 query = api.query
                     .create(e.target.value)
-                    .enableHighlights()
+                    .toJSON()
                 ;
 
                 // 3.- Execute search
